Ticketee: Added new feature file viewing_projects.feature, added new gem factory_girl, BRB

--- a/ticketee/app/views/projects/_form.html.erb
+++ b/ticketee/app/views/projects/_form.html.erb
@@ -1,5 +1,9 @@
 <%= form_for(@project) do |f| %>
-    <%= f.error_messages %>
+
+    <% if @project.errors.any? %>
+        <%= f.error_messages %>
+    <% end %>
+
     <p>
         <%= f.label :name %>
         <%= f.text_field :name %>
