--- a/ticketee/app/views/projects/show.html.erb
+++ b/ticketee/app/views/projects/show.html.erb
@@ -5,6 +5,7 @@
 </div>
 
 <br />
-<%= link_to "Edit Project", edit_project_path(@project) %>
+<%= link_to "Edit Project", edit_project_path(@project) %> |
+<%= link_to "Delete Project", @project, :method => :delete, :confirm => "Are you sure you wanna delete this project?" %> |
 
 <%= render 'index_link' %>
