--- a/ticketee/app/views/tickets/show.html.erb
+++ b/ticketee/app/views/tickets/show.html.erb
@@ -1,5 +1,7 @@
 <% title(@project.name, "Projects") %>
-<h2><%= @project.name %> : <%= @ticket.title %></h2>
+<div id="ticket">
+    <h2><%= @project.name %> : <%= @ticket.title %></h2>
+</div>
 
 <div>
   <%= @ticket.description %>
@@ -10,4 +12,4 @@
 <%= link_to "Delete Project", @project, :method => :delete, :confirm => "Are you sure you wanna delete this project?" %> |
 <%= link_to "New Ticket", new_project_ticket_path(@project) %> |
 
-<%= render 'index_link' %>
+<%= render 'projects/index_link' %>
