--- a/ticketee/app/views/tickets/show.html.erb
+++ b/ticketee/app/views/tickets/show.html.erb
@@ -11,7 +11,7 @@
 <% @back_link_text = "Back to Project" %>
 <%= link_to @back_link_text, project_path(@project) %> |
 <%= link_to "Edit Ticket", [:edit, @project, @ticket] %> |
-<%= link_to "Delete Project", @project, :method => :delete, :confirm => "Are you sure you wanna delete this ticket?" %> |
+<%= link_to "Delete Ticket", [@project, @ticket], :method => :delete, :confirm => "Are you sure you wanna delete this ticket?" %> |
 <%= link_to "New Ticket", new_project_ticket_path(@project) %> |
 
 <%= render 'projects/index_link' %>
