Added Devise and ran migrations ready to add user registration and authentication

--- a/ticketee/app/views/tickets/edit.html.erb
+++ b/ticketee/app/views/tickets/edit.html.erb
@@ -3,5 +3,5 @@
 
 <div>
   <br />
-  <%= link_to 'Cancel Edit', project_ticket_path(@ticket) %>
+  <%= link_to 'Cancel Edit', [@project, @ticket] %>
 </div>
