--- a/ticketee/app/assets/stylesheets/application.css
+++ b/ticketee/app/assets/stylesheets/application.css
@@ -62,6 +62,8 @@ input[type=file] {
   background: #FF3444;
 }
 
+#notice, #alert { margin-bottom:10px; }
+
 ul#tickets {
   padding: 15px;
   list-style-type: none;
@@ -171,4 +173,16 @@ menu, #ticket .state, .states {
 
 .comment, .new_comment {
   width: 75%;
+}
+
+#errorExplanation ul{
+    margin-left:30px;
+    list-style-type:square;
+}
+
+#errorExplanation ul li{
+    background: #FBB;
+    border:1px solid #F77;
+    margin:3px 0;
+    padding: 3px;
 }
