Added feature to ensure Devise signup is always working

--- a/ticketee/app/views/projects/index.html.erb
+++ b/ticketee/app/views/projects/index.html.erb
@@ -14,3 +14,7 @@
   <br />
   <%= link_to 'New Project', new_project_path %>
 </div>
+
+<nav>
+  <%= link_to "Sign up", new_user_registration_path %>
+</nav>
