--- a/ticketee/app/views/projects/show.html.erb
+++ b/ticketee/app/views/projects/show.html.erb
@@ -5,8 +5,10 @@
 </div>
 
 <br />
+<%= admins_only do %>
 <%= link_to "Edit Project", edit_project_path(@project) %> |
 <%= link_to "Delete Project", @project, :method => :delete, :confirm => "Are you sure you wanna delete this project?" %> |
+<% end %>
 <%= link_to "New Ticket", new_project_ticket_path(@project) %> |
 
 
